build: add jpackage plugin