@@ -654,6 +654,46 @@
 						<argLine>-Dtestfx.robot=glass -Dglass.platform=Monocle -Dmonocle.platform=Headless -Dprism.order=sw</argLine>
 					</configuration>
 				</plugin>
+				<plugin>
+					<groupId>com.github.akman</groupId>
+					<artifactId>jpackage-maven-plugin</artifactId>
+					<version>0.1.3</version>
+					<configuration>
+						<mainclass>org.janelia.saalfeldlab.paintera.Paintera</mainclass>
+						<mainjar>${project.artifactId}-${project.version}.jar</mainjar>
+						<input>${project.basedir}/target</input>
+						<appversion>${project.version}</appversion>
+						<icon>${project.basedir}/img/icon-draft.svg</icon>
+						<linuxpackagename>paintera</linuxpackagename>
+						<linuxappcategory>Utilities</linuxappcategory>
+						<linuxmenugroup>Utilities</linuxmenugroup>
+						<linuxapprelease>Paintera</linuxapprelease>
+						<linuxshortcut>true</linuxshortcut>
+						<modulepath>
+							<dependencysets>
+								<dependencyset>
+									<includeoutput>true</includeoutput>
+									<excludeautomatic>true</excludeautomatic>
+								</dependencyset>
+							</dependencysets>
+						</modulepath>
+						<addmodules>
+							<addmodule>javafx.base</addmodule>
+							<addmodule>javafx.controls</addmodule>
+							<addmodule>javafx.fxml</addmodule>
+							<addmodule>javafx.media</addmodule>
+							<addmodule>javafx.swing</addmodule>
+							<addmodule>javafx.web</addmodule>
+							<addmodule>javafx.graphics</addmodule>
+							<addmodule>java.naming</addmodule>
+							<addmodule>java.management</addmodule>
+							<addmodule>java.sql</addmodule>
+						</addmodules>
+						<!--@formatter:off-->
+						<javaoptions>--illegal-access=permit --add-opens=javafx.base/javafx.util=ALL-UNNAMED --add-opens=javafx.base/javafx.event=ALL-UNNAMED --add-opens=javafx.base/javafx.beans.property=ALL-UNNAMED --add-opens=javafx.base/com.sun.javafx.binding=ALL-UNNAMED --add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED --add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED --add-opens=javafx.graphics/javafx.stage=ALL-UNNAMED --add-opens=javafx.graphics/javafx.geometry=ALL-UNNAMED --add-opens=javafx.graphics/javafx.animation=ALL-UNNAMED --add-opens=javafx.graphics/javafx.scene.input=ALL-UNNAMED --add-opens=javafx.graphics/javafx.scene.image=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.prism=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.javafx.image=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.javafx.perf=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.javafx.cursor=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.javafx.geom.transform=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.scenario.animation=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.scenario.animation.shared=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.scenario.effect=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.prism.paint=ALL-UNNAMED</javaoptions>
+						<!--@formatter:on-->
+					</configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 		<plugins>
@@ -824,6 +864,11 @@
 				</configuration>
 			</plugin>
 
+			<plugin>
+				<groupId>com.github.akman</groupId>
+				<artifactId>jpackage-maven-plugin</artifactId>
+				<version>0.1.3</version>
+			</plugin>
 
 			<plugin>
 				<groupId>org.openjfx</groupId>
